# NomiaMD

./: .gitignore  Makefile  README.md  notes_consultation_simulees.md  train.jsonl
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: db.py  main.py  models.py  sample_patients.py
backend/app/extraction/: engine.py  pipeline.py
backend/app/ramq/: embeddings.py  reference.py  reference_data.json  reference_data.section_b.json  retrieval.py  rules.py
backend/app/ramq/ingest/: build_reference.py  models.py  parse_html.py
backend/app/tasks/: base.py  billing_codes.py  consultation_summary.py  registry.py
backend/scripts/: eval_extraction.py  fake_llm_server.py  ingest_ramq_manual.py  try_extraction.py
backend/tests/: conftest.py  test_consultation_summary.py  test_embedding_retriever.py  test_extraction.py  test_fake_llm_server.py  test_pipeline.py  test_ramq_ingest.py  test_ramq_reference.py  test_ramq_reference_data.py  test_sample_patients.py
backend/tests/fixtures/: eval_billing_codes.jsonl  reference_data_test.json
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  Logo.tsx  api.ts  styles.css
