[project]
name = "nomiamd-backend"
version = "0.1.0"
description = "Extracts RAMQ billing codes (and future outputs) from clinical transcripts"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "openai>=1.40",
    "pydantic>=2.9",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]
